# taskin

./: .coverage  Dockerfile  README.md  docker-compose.yml  lefthook.yml  mkdocs.yml  netlify.toml  pyproject.toml
.github/workflows/: build-backend.yml  build-ui.yml  build.yml
docs/: index.md  quick-start.md
docs/configuration/: dependencies.md  index.md  oneoff-tasks.md  reset-intervals.md  tasks.md  webhooks.md
docs/deployment/: docker-compose.md  docker.md
docs/features/: dependency-graph.md  reports.md
taskin-api/: .gitignore  Dockerfile  Dockerfile.dev  README.md  config_loader.py  db_init.py  entrypoint.sh  entrypointdev.sh  main.py  models.py  pyproject.toml  routes.py  schemas.py
taskin-api/alembic/: env.py
taskin-api/alembic/versions/: 075e10c3a6f7_add_skipped_status.py  10ff48682be0_simplify_dependencies_to_node_only.py  2a2c3fcdf25e_add_two_dependency_tables.py  9d10c29f55c6_initial_migration.py  dcefd4932568_oneoff_dependancys.py
taskin-api/api/: __init__.py  dependencies.py  oneoffs.py  reports.py  reset.py  todos.py
taskin-api/models/: __init__.py  db.py  tasks.py
taskin-api/routers/: dev.py
taskin-api/templates/: task_view.html
taskin-api/templates/base/: layout.html
taskin-api/templates/macro/: category.html  category_collection.html  task.html
taskin_api/: .dockerignore  README.md  alembic.ini  config_loader.py  db_init.py  dep_manager.py  main.py  models.py  notifier_service.py  schemas.py
taskin_api/alembic/: env.py
taskin_api/alembic/versions/: 075e10c3a6f7_add_skipped_status.py  2a2c3fcdf25e_add_two_dependency_tables.py  30677878a0ed_added_events.py  71dcaa412f6b_added_report_tables.py  9d10c29f55c6_initial_migration.py  dcefd4932568_oneoff_dependancys.py  ee900e1af34c_removed_dep_tables.py
taskin_api/api/: __init__.py  categories.py  dependencies.py  events.py  oneoffs.py  reports.py  reset.py  todos.py
taskin_api/tests/: test_dependancies.py
ui/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/.husky/: pre-commit
ui/dev-dist/: sw.js  workbox-54d379e2.js
ui/nginx/: nginx.conf
ui/src/: App.css  App.tsx  api.ts  main.tsx  mocks.ts  styles.ts  types.ts
ui/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
ui/src/components/: CategoryCard.tsx  MermaidGraphView.tsx  NoReloadButton.tsx  Settings.tsx  TabPannle.tsx  Task.tsx  TimeslotChip.tsx  Todo.tsx  TodoItem.tsx  newCategory.tsx  newTask.tsx
ui/src/lib/: utils.ts
ui/src/pages/: AllTasksPage.tsx  Edit.tsx  GraphPage.tsx  Home.tsx  Main.tsx  (+3 more)
ui2/: package-lock.json  package.json
ui2/src/: App.tsx  store.ts  types.ts
(+16 files in other folders)
