[tool.poetry]
name = "taskin-api"
version = "0.1.0"
description = "A FastAPI-based todo API with categories and SQLite storage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
pydantic = "^2.5.0"
structlog = "^25.5.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
