[tool.poetry]
name = "taskin-api"
version = "0.1.0"
description = "A FastAPI-based todo API with categories and SQLite storage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
pydantic = "^2.5.0"
structlog = "^25.5.0"
alembic = "^1.13.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.23,<10.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "pyright[nodejs] (>=1.1.407,<2.0.0)",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]
