[tool.poetry]
name = "taskin-api"
version = "0.1.0"
description = ""
authors = ["ripple <github@ripple.contact>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
